# redelex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test-row-encoder.ipynb
.github/workflows/: publish-to-pypi.yml
experiments/: utils.py
experiments/continuous_learning/: continuous_learning.py  continuous_task.py  models.py  utils.py
experiments/original/: dbgnn_hyperparams.py  gbdt_hyperparams.py  getml_xgboost.py  tabular_hyperparams.py  utils.py
experiments/original/models/: __init__.py  dbformer.py  tabular.py
experiments/pretraining/: dbgnn_nopretrain.py  dbgnn_pretrain.py  lightning_wrappers.py  utils.py
experiments/scripts/original/: README.md  slurm_cpu_big_run_getml_xgboost.sh  (+2 more)
experiments/universal_encoder/: download-test.py  lightning_wrappers.py  load_model.py  models.py  universal_encoder_baseline.py  universal_encoder_pretrained.py  universal_encoder_supervised.py  utils.py
notebooks/: mlflow-download.ipynb  process-data-original.ipynb  process-data-pretrain.ipynb  process-data-universal-encoder.ipynb  utils.py
redelex/: __init__.py
redelex/data/: __init__.py  graph.py  relgt_tokens.py  semantic_schema.py  stats.py  tabular.py  text_embedder.py
redelex/datasets/: __init__.py  ctu_dataset.py  ctu_datasets.py  db_dataset.py
redelex/db/: __init__.py  foreign_key.py  inspector.py  interface.py  relbench_db.py  remote_db.py  schema.py  utils.py  visualize.py
redelex/loaders/: __init__.py  composed_loader.py  hgt_multi_input_loader.py
redelex/tasks/: __init__.py  ctu_entity_task_temporal.py  ctu_tasks.py  task_impute.py  utils.py
redelex/transforms/: __init__.py  attach_dict.py  attach_target.py  attach_values.py  corruptors.py
redelex/utils/: __init__.py  datetime.py  merge.py  semantic_schema.py
scripts/: dataset-info.py  mlflow-download.ipynb  process-data-pretrain.ipynb  task-info.py
slurm/continuous_learning/: README.md  slurm_gpu_run_cl_from_scratch.sh  slurm_gpu_run_cl_ft_full.sh  slurm_gpu_run_cl_ft_newonly.sh  slurm_gpu_run_cl_ft_upsample.sh
slurm/original/: slurm_cpu_big_run_getml_xgboost.sh  slurm_cpu_big_xl_run_getml_xgboost.sh  slurm_cpu_run_getml_xgboost.sh  slurm_cpu_run_linear_sage_hyperparams.sh  slurm_cpu_run_resnet_tabular_aggregate_hyperparams.sh
slurm/pretrain/: README.md  slurm_cpu_big_run_linear_dbformer_pretrain.sh  slurm_cpu_big_run_resnet_sage_pretrain.sh  slurm_cpu_xl_run_linear_dbformer_nopretrain.sh  slurm_cpu_xl_run_linear_dbformer_pretrain.sh  slurm_cpu_xl_run_linear_sage_pretrain.sh  slurm_cpu_xl_run_resnet_sage_nopretrain.sh  slurm_cpu_xl_run_resnet_sage_pretrain.sh
slurm/universal_encoder/: README.md  slurm_cpu_big_run_baseline.sh  slurm_cpu_xl_run_baseline.sh  slurm_cpu_xl_run_universal_hetero.sh  slurm_cpu_xl_run_universal_homogeneous.sh  slurm_cpu_xl_run_universal_pretrained_ablations.sh  slurm_cpu_xl_run_universal_pretrained_hetero.sh  slurm_cpu_xl_run_universal_pretrained_homoge.sh  slurm_gpu_big_run_baseline.sh  slurm_gpu_big_run_universal_hetero.sh  slurm_gpu_big_run_universal_homogeneous.sh  slurm_gpu_run_universal_pretrained_hetero_validation.sh  slurm_gpu_run_universal_pretrained_homoge_validation.sh  slurm_gpu_run_universal_pretrained_homoge_validation_rel_all.sh  slurm_gpu_xl_run_universal_pretrained_hetero.sh  slurm_gpu_xl_run_universal_pretrained_homoge.sh
(+46 files in other folders)
